--- a/rabbitmq/Chart.yaml
+++ b/rabbitmq/Chart.yaml
@@ -1,10 +1,14 @@
 name: rabbitmq
-home: https://www.rabbitmq.com
-source:
-- https://github.com/bitnami/bitnami-docker-rabbitmq
-version: 0.2.1
+version: 0.3.0
 description: Open source message broker software that implements the Advanced Message Queuing Protocol (AMQP)
+keywords:
+- rabbitmq
+- message queue
+- AMQP
+home: https://www.rabbitmq.com
+sources:
+- https://github.com/bitnami/bitnami-docker-rabbitmq
 maintainers:
-- Bitnami <containers@bitnami.com>
-details: |-
-  RabbitMQ is an open source message broker software that implements the Advanced Message Queuing Protocol (AMQP).
+- name: Bitnami
+  email: containers@bitnami.com
+engine: gotpl
