--- a/rabbitmq/templates/rabbitmq-svc.yaml
+++ b/rabbitmq/templates/rabbitmq-svc.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: {{ printf "%s-%s" .Release.Name "rabbitmq" | trunc 24 }}
   labels:
     provider: rabbitmq
+    release: {{ .Release.Name }}
     heritage: bitnami
 spec:
   type: LoadBalancer
@@ -13,3 +14,4 @@ spec:
     targetPort: rabbitmq
   selector:
     provider: rabbitmq
+    release: {{ .Release.Name }}
