--- a/odoo/templates/odoo-svc.yaml
+++ b/odoo/templates/odoo-svc.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: odoo
+  name: {{ printf "%s-%s" .Release.Name "odoo" | trunc 24 }}
   labels:
     app: odoo
     provider: odoo-server
+    release: {{ .Release.Name }}
     heritage: bitnami
 spec:
   type: LoadBalancer
@@ -15,3 +16,4 @@ spec:
   selector:
     app: odoo
     provider: odoo-server
+    release: {{ .Release.Name }}
