use the `default` sprig function to set default values

--- a/drupal/charts/mariadb/templates/mariadb-rc.yaml
+++ b/drupal/charts/mariadb/templates/mariadb-rc.yaml
@@ -30,14 +30,14 @@ spec:
               name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
               key: mariadb-root-password
         - name: MARIADB_USER
-          value: {{ .Values.mariadbUser | quote }}
+          value: {{ default "" .Values.mariadbUser | quote }}
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
               key: mariadb-password
         - name: MARIADB_DATABASE
-          value: {{ .Values.mariadbDatabase | quote }}
+          value: {{ default "" .Values.mariadbDatabase | quote }}
         ports:
         - name: mysql
           containerPort: 3306
