--- a/ghost/templates/ghost-secrets.yaml
+++ b/ghost/templates/ghost-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  ghost-password: {{ .Values.ghostPassword | quote | b64enc | quote }}
-  smtp-password: {{ .Values.smtpPassword | quote | b64enc | quote }}
+  ghost-password: {{ default "" .Values.ghostPassword | b64enc | quote }}
+  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
