--- a/joomla/templates/joomla-secrets.yaml
+++ b/joomla/templates/joomla-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  joomla-password: {{ .Values.joomlaPassword | quote | b64enc | quote }}
-  smtp-password: {{ .Values.smtpPassword | quote | b64enc | quote }}
+  joomla-password: {{ default "" .Values.joomlaPassword | b64enc | quote }}
+  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
