--- a/mediawiki/templates/mediawiki-secrets.yaml
+++ b/mediawiki/templates/mediawiki-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  mediawiki-password: {{ .Values.mediawikiPassword | quote | b64enc | quote }}
-  smtp-password: {{ .Values.smtpPassword | quote | b64enc | quote }}
+  mediawiki-password: {{ default "" .Values.mediawikiPassword | b64enc | quote }}
+  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
