--- a/mongodb/templates/mongodb-secrets.yaml
+++ b/mongodb/templates/mongodb-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  mongodb-root-password: {{ .Values.mongodbRootPassword | quote | b64enc | quote }}
-  mongodb-password: {{ .Values.mongodbPassword | quote | b64enc | quote }}
+  mongodb-root-password: {{ default "" .Values.mongodbRootPassword | b64enc | quote }}
+  mongodb-password: {{ default "" .Values.mongodbPassword | b64enc | quote }}
