--- a/phpbb/templates/phpbb-secrets.yaml
+++ b/phpbb/templates/phpbb-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  phpbb-password: {{ .Values.phpbbPassword | quote | b64enc | quote }}
-  smtp-password: {{ .Values.smtpPassword | quote | b64enc | quote }}
+  phpbb-password: {{ default "" .Values.phpbbPassword | b64enc | quote }}
+  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
