--- a/redis/templates/redis-secrets.yaml
+++ b/redis/templates/redis-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  redis-password: {{ .Values.redisPassword | quote | b64enc | quote }}
+  redis-password: {{ default "" .Values.redisPassword | b64enc | quote }}
