--- a/redmine/templates/redmine-secrets.yaml
+++ b/redmine/templates/redmine-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  redmine-password: {{ .Values.redminePassword | quote | b64enc | quote }}
-  smtp-password: {{ .Values.smtpPassword | quote | b64enc | quote }}
+  redmine-password: {{ default "" .Values.redminePassword | b64enc | quote }}
+  smtp-password: {{ default "" .Values.smtpPassword | b64enc | quote }}
