--- a/drupal/templates/drupal-secrets.yaml
+++ b/drupal/templates/drupal-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  drupal-password: {{ .Values.drupalPassword | quote | b64enc | quote }}
+  drupal-password: {{ default "" .Values.drupalPassword | b64enc | quote }}
