--- a/joomla/charts/mariadb/templates/mariadb-secrets.yaml
+++ b/joomla/charts/mariadb/templates/mariadb-secrets.yaml
@@ -8,5 +8,5 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  mariadb-root-password: {{ .Values.mariadbRootPassword | quote | b64enc | quote }}
-  mariadb-password: {{ .Values.mariadbPassword | quote | b64enc | quote }}
+  mariadb-root-password: {{ default "" .Values.mariadbRootPassword | b64enc | quote }}
+  mariadb-password: {{ default "" .Values.mariadbPassword | b64enc | quote }}
