--- a/joomla/templates/joomla-rc.yaml
+++ b/joomla/templates/joomla-rc.yaml
@@ -37,27 +37,27 @@ spec:
               name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
               key: mariadb-root-password
         - name: JOOMLA_USERNAME
-          value: {{ .Values.joomlaUser | quote }}
+          value: {{ default "" .Values.joomlaUser | quote }}
         - name: JOOMLA_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "joomla" | trunc 24 }}
               key: joomla-password
         - name: JOOMLA_EMAIL
-          value: {{ .Values.joomlaEmail | quote }}
+          value: {{ default "" .Values.joomlaEmail | quote }}
         - name: SMTP_HOST
-          value: {{ .Values.smtpHost | quote }}
+          value: {{ default "" .Values.smtpHost | quote }}
         - name: SMTP_PORT
-          value: {{ .Values.smtpPort | quote }}
+          value: {{ default "" .Values.smtpPort | quote }}
         - name: SMTP_USER
-          value: {{ .Values.smtpUser | quote }}
+          value: {{ default "" .Values.smtpUser | quote }}
         - name: SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "joomla" | trunc 24 }}
               key: smtp-password
         - name: SMTP_PROTOCOL
-          value: {{ .Values.smtpProtocol | quote }}
+          value: {{ default "" .Values.smtpProtocol | quote }}
         ports:
         - name: http
           containerPort: 80
