--- a/memcached/templates/memcached-secrets.yaml
+++ b/memcached/templates/memcached-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  memcached-password: {{ .Values.memcachedPassword | quote | b64enc | quote }}
+  memcached-password: {{ default "" .Values.memcachedPassword | b64enc | quote }}
