--- a/postgresql/templates/postgresql-rc.yaml
+++ b/postgresql/templates/postgresql-rc.yaml
@@ -25,14 +25,14 @@ spec:
         image: bitnami/postgresql:{{ .Values.imageTag }}
         env:
         - name: POSTGRES_USER
-          value: {{ .Values.postgresUser | quote }}
+          value: {{ default "" .Values.postgresUser | quote }}
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ printf "%s-%s" .Release.Name "postgresql" | trunc 24 }}
               key: postgres-password
         - name: POSTGRES_DB
-          value: {{ .Values.postgresDb | quote }}
+          value: {{ default "" .Values.postgresDb | quote }}
         ports:
         - name: postgresql
           containerPort: 5432
