--- a/postgresql/templates/postgresql-secrets.yaml
+++ b/postgresql/templates/postgresql-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  postgres-password: {{ .Values.postgresPassword | quote | b64enc | quote }}
+  postgres-password: {{ default "" .Values.postgresPassword | b64enc | quote }}
