--- a/tomcat/templates/tomcat-rc.yaml
+++ b/tomcat/templates/tomcat-rc.yaml
@@ -25,7 +25,7 @@ spec:
         image: bitnami/tomcat:{{ .Values.imageTag }}
         env:
         - name: TOMCAT_USER
-          value: {{ .Values.tomcatUser | quote }}
+          value: {{ default "" .Values.tomcatUser | quote }}
         - name: TOMCAT_PASSWORD
           valueFrom:
             secretKeyRef:
