--- a/tomcat/templates/tomcat-secrets.yaml
+++ b/tomcat/templates/tomcat-secrets.yaml
@@ -8,4 +8,4 @@ metadata:
     heritage: bitnami
 type: Opaque
 data:
-  tomcat-password: {{ .Values.tomcatPassword | quote | b64enc | quote }}
+  tomcat-password: {{ default "" .Values.tomcatPassword | b64enc | quote }}
