Added missing field to wordpress-rc

--- a/wordpress/manifests/wordpress-rc.yaml
+++ b/wordpress/manifests/wordpress-rc.yaml
@@ -60,6 +60,8 @@ spec:
             secretKeyRef:
               name: wordpress
               key: smtp-password
+        - name: SMTP_USERNAME
+          value: ""
         - name: SMTP_PROTOCOL
           value: ""
         ports:
