--- a/mariadb/templates/mariadb-deployment.yaml
+++ b/mariadb/templates/mariadb-deployment.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
   name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
   labels:
@@ -8,10 +8,6 @@ metadata:
     heritage: bitnami
 spec:
   replicas: 1
-  selector:
-    provider: mariadb
-    release: {{ .Release.Name }}
-    version: {{ .Values.imageTag }}
   template:
     metadata:
       labels:
