--- a/mariadb/templates/mariadb-svc.yaml
+++ b/mariadb/templates/mariadb-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
     provider: mariadb
     release: {{ .Release.Name }}
