--- a/mariadb/templates/mariadb-secrets.yaml
+++ b/mariadb/templates/mariadb-secrets.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    provider: mariadb
+    provider: {{ .Chart.Name }}
     release: {{ .Release.Name }}
     heritage: bitnami
 type: Opaque
