mariadb: adds `imagePullPolicy` field

--- a/mariadb/templates/mariadb-deployment.yaml
+++ b/mariadb/templates/mariadb-deployment.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
       - name: {{ template "fullname" . }}
         image: bitnami/mariadb:{{ .Values.imageTag }}
+        imagePullPolicy: {{ template "imagePullPolicy" . }}
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
