--- a/mariadb/templates/mariadb-deployment.yaml
+++ b/mariadb/templates/mariadb-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     provider: {{ .Chart.Name }}
     release: {{ .Release.Name }}
-    heritage: bitnami
+    heritage: {{ .Release.Service }}
 spec:
   template:
     metadata:
@@ -13,7 +13,7 @@ spec:
         provider: {{ .Chart.Name }}
         release: {{ .Release.Name }}
         version: {{ .Values.imageTag }}
-        heritage: bitnami
+        heritage: {{ .Release.Service }}
     spec:
       containers:
       - name: {{ template "fullname" . }}
