--- a/mariadb/templates/mariadb-secrets.yaml
+++ b/mariadb/templates/mariadb-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     provider: {{ .Chart.Name }}
     release: {{ .Release.Name }}
-    heritage: bitnami
+    heritage: {{ .Release.Service }}
 type: Opaque
 data:
   mariadb-root-password: {{ default "" .Values.mariadbRootPassword | b64enc | quote }}
