--- a/mariadb/templates/mariadb-secrets.yaml
+++ b/mariadb/templates/mariadb-secrets.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{ template "fullname" . }}
   labels:
     provider: {{ .Chart.Name }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Name }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 type: Opaque
