--- a/mariadb/values.yaml
+++ b/mariadb/values.yaml
@@ -1,20 +1,27 @@
-# Bitnami MariaDB image version
-# ref: https://hub.docker.com/r/bitnami/mariadb/tags/
+## Bitnami MariaDB image version
+## ref: https://hub.docker.com/r/bitnami/mariadb/tags/
+##
+## Default: none
 imageTag: 10.1.14-r2
 
-# Specify a imagePullPolicy
+## Specify a imagePullPolicy
+## Default to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-imagePullPolicy:
+##
+# imagePullPolicy:
 
-# Specify password for root user
+## Specify password for root user
 ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
-mariadbRootPassword:
+##
+# mariadbRootPassword:
 
-# Create a database user
+## Create a database user
 ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#creating-a-database-user-on-first-run
-mariadbUser:
-mariadbPassword:
+##
+# mariadbUser:
+# mariadbPassword:
 
-# Create a database
-# ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#creating-a-database-on-first-run
-mariadbDatabase:
+## Create a database
+## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#creating-a-database-on-first-run
+##
+# mariadbDatabase:
