--- a/mariadb/templates/mariadb-secrets.yaml
+++ b/mariadb/templates/mariadb-secrets.yaml
@@ -3,10 +3,10 @@ kind: Secret
 metadata:
   name: {{ template "fullname" . }}
   labels:
-    provider: {{ .Chart.Name }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Name }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    provider: "{{ .Chart.Name }}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Name }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
   mariadb-root-password: {{ default "" .Values.mariadbRootPassword | b64enc | quote }}
