--- a/redmine/templates/redmine-secrets.yaml
+++ b/redmine/templates/redmine-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "redmine" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
     provider: redmine
     release: {{ .Release.Name }}
