--- a/redmine/templates/redmine-svc.yaml
+++ b/redmine/templates/redmine-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "redmine" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
     app: redmine
     provider: redmine-server
