--- a/redmine/templates/redmine-secrets.yaml
+++ b/redmine/templates/redmine-secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     provider: redmine
     release: {{ .Release.Name }}
-    heritage: bitnami
+    heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
   redmine-password: {{ default "" .Values.redminePassword | b64enc | quote }}
