--- a/redmine/templates/redmine-svc.yaml
+++ b/redmine/templates/redmine-svc.yaml
@@ -14,6 +14,6 @@ spec:
     port: 80
     targetPort: http
   selector:
-    app: redmine
+    app: {{ template "fullname" . }}
     provider: redmine-server
     release: {{ .Release.Name }}
